--- a/style.css
+++ b/style.css
@@ -1,68 +1,50 @@
 body{
-background: linear-gradient(#c516ff, #2cc3ff);
-background-repeat: no-repeat;
-background-attachment: fixed;
-color:#000000
+background-color: #879582;
+color:#595353;
+font-size: 50px;
 }
 
-#xlabel {
-font-size: 40px
+.search-container {
+    display: flex;
+    justify-content: center; /* Horizontally center the container */
+    align-items: center;
 }
 
-#ylabel {
-font-size: 40px
+#searchButton {
+    height: 71px;
+    width: 100px;
+    padding: 10px; 
+    font-size: 25px; 
+    border: 1px solid #999999; 
+    border-top-right-radius: 15px; /* Apply border radius to top right corner */
+    border-bottom-right-radius: 15px; /* Apply border radius to bottom right corner */
+    background-color: #545454;
+    color: #747474;
+    cursor: pointer;
 }
 
-#zlabel {
-font-size: 40px
+#searchButton button:hover {
+    background-color: #000000; 
+    color:#ffffff;
 }
-
-#clock {
-float:left
-}
-
-#Home {
-float: left
-}
-
-#dice-roller {
-float: left
-}
-
-#games {
-float: left
-}
-
-#Search {
-float: left
-}
-
-#current-time {
-position: absolute;
-top: 40%;
-left: 50%;
-transform: translate(-50%,-50%);
-color: 000;
-font-size: 90px;
-font-weight: 600;
-letter-spacing: 3px;
-}
-
 
 #searchResults button {
     display: block;
     margin-bottom: 5px; /* Adjust spacing between buttons */
     padding: 10px 20px; /* Adjust button padding */
     background-color: #4d524d; /* Green background color */
-    color: #2cc3ff;
+    color: #000000;
     border: none;
-    border-radius: 4px;
+    border-radius: 15px;
     cursor: pointer;
     transition: background-color 0.3s;
+    height: 50px;
+    width: 650px;
 }
 
 #searchResults button:hover {
-    background-color: #c516ff; /* Darker green color on hover */
+    background-color: #000000; /* Darker green color on hover */
+    color:#ffffff;
 }
 
 #searchResults button:disabled {
@@ -72,14 +54,90 @@ letter-spacing: 3px;
 
 
 #searchInput {
-    width: 300px; 
+    width: 650px; 
+    height: 50px;
     padding: 10px; 
-    font-size: 16px; 
-    border: 1px solid #ccc; 
-    border-radius: 5px; 
+    font-size: 25px; 
+    border: 1px solid #999999; 
+    border-top-left-radius: 15px; /* Apply border radius to top left corner */
+    border-bottom-left-radius: 15px; /* Apply border radius to bottom left corner */
+    margin-right: 0px;
+    background-color: #585858;
+    color: #747474;
+
 }
 
 #searchInput:focus {
     outline: none; 
-    border-color: #0040ff; 
+    border-color: #636569; 
+}
+
+#Youtube {
+    position: absolute;
+    left: 350px; 
+    bottom: 340px;
+    color:#595353;
+}
+
+#Gmail {
+    position: absolute;
+    left: 500px; 
+    bottom: 340px;
+    color:#595353;
+}
+
+#Discord {
+    position: absolute;
+    left: 650px; 
+    bottom: 340px;
+    color:#595353;
+}
+
+#Chatgpt {
+    position: absolute;
+    left: 800px; 
+    bottom: 340px;
+    color:#595353;
+}
+
+#Google {
+    position: absolute;
+    left: 950px; 
+    bottom: 340px;
+    color:#595353;
+}
+
+#Googledocs {
+    position: absolute;
+    left: 350px; 
+    bottom: 200px; 
+    color:#595353;
+}
+
+#Googlesites {
+    position: absolute;
+    left: 500px; 
+    bottom: 200px; 
+    color:#595353;
+}
+
+#Echo {
+    position: absolute;
+    left: 650px; 
+    bottom: 200px; 
+    color:#595353;
+}
+
+#IXL {
+    position: absolute;
+    left: 800px; 
+    bottom: 200px; 
+    color:#595353;
+}
+
+#Googleclassroom {
+    position: absolute;
+    left: 950px; 
+    bottom: 200px; 
+    color:#595353;
 }
