--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ font-size: 50px;
 
 
 /*Credits section*/
-#Github-credit {
+#Git {
     background-color: #545454; 
     color: #747474;
     height: 35px;
@@ -128,7 +128,7 @@ font-size: 50px;
     cursor: pointer;
 }
 
-#Instructions {
+#Ins {
     background-color: #545454; 
     color: #747474;
     height: 35px;
@@ -138,7 +138,7 @@ font-size: 50px;
     cursor: pointer;
 }
 
-#Change-log {
+#Clog {
     background-color: #545454; 
     color: #747474;
     height: 35px;
